# guardian

./: .gitignore  README.md  pyproject.toml
src/aion/: utils.py
src/aion/constructs/: anchor.py  ledger.py  mermaid.py  moltbook_client.py  navigator.py  seeker.py  sentinel.py  social.py  social_hub.py  voice.py
src/aion/constructs/social_providers/: base.py  moltbook_client.py  telegram_bot.py
src/aion/constructs/social_providers/twitter/: client.py  eliza_client.js  stealth_client.py
src/aion/core/: agent.py  character.json  grimoire.json  heartbeat.py  mcp_client.py  mind.py  skills_registry.py  social_strategy.py  strategy.py  tempo.py  vault.py  will.py
src/aion/core/memory/: engine.py  feelings.json  reflection.py
src/aion/core/memory/index/: default__vector_store.json  docstore.json  index_store.json
src/aion/core/security/: __init__.py  advisor.py  auditor.py  path_guard.py  threat_scanner.py
src/aion/interface/: cli.py  comm_link.py  mcp_server.py  migrations.py  scaffold.py
src/aion/skills/: alpaca_bot.py  artist.py  bard.py  chronomancer.py  cot_sentinel.py  critic.py  moltbook_skill.py  ppa.py  scholar.py  science.py  symbiote.py  xenolinguistics.py
src/aion/skills/vision/: cortex.py
src/aion_daemon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/guardian/: brain.py  daemon_logic.py  mcp_server.py  notes_logic.py  utils.py
src/guardian/guardian_cli/: init_logic.py  main.py
src/guardian/guardian_daemon/: main.py
src/guardian/protocols/: hello_world.py
src/guardian_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ralph/: brain.py  mcp_server.py  notes_logic.py  utils.py
src/ralph/cli/: chat_logic.py  init_logic.py  main.py  migration_logic.py
src/ralph/core/: character.json  chronos.py  main.py  planner.py  volition.py
src/ralph/core/memory/: engine.py  legacy_core.py  reflection.py
src/ralph/core/memory/index/: default__vector_store.json
src/ralph/skills/: finance.py  guardian.py  location.py  researcher.py  speech.py
src/ralph_daemon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
