[project]
name = "guardian-agent"
version = "0.0.1"
description = "An autonomous AI agent that proactively and safely manages database migrations."
authors = [{ name = "Ralph (forged by Gemini)", email = "ralph@example.com" }]
dependencies = [
    "watchdog>=2.3.1",
    "GitPython>=3.1.30",
    "SQLAlchemy>=2.0.23",
    "alembic>=1.13.0",
    "typer[all]>=0.9.0",
    "ollama>=0.1.0",
    "mcp>=0.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
guardian-cli = "guardian.guardian_cli.main:main"
guardian-daemon = "guardian.guardian_daemon.main:start_daemon_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["guardian*"]
